# portfolio-creator

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yaml  deploy.yaml  lint.yaml
backend/: .flake8  Dockerfile  Dockerfile.dev  alembic.ini  gunicorn_conf.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8581b42393b0_add_name_to_users.py  b7f7c5e7e903_create_users_table.py
backend/backend/: __init__.py  constants.py
backend/backend/models/: auth.py
backend/backend/routes/: __init__.py  auth.py  index.py
backend/backend/schemas/: auth.py
backend/backend/utils/: auth.py  hosts.py
frontend/: Dockerfile  Dockerfile.dev  next.config.js  package.json  vercel.json
frontend/components/Navbar/: Narbar.tsx  Navbar.module.css  navbar.module.css
frontend/helpers/: ApiContext.js
frontend/hooks/: api.tsx
frontend/pages/: _app.tsx  index.tsx  login.tsx
frontend/styles/: Login.module.css  globals.css  login.module.css
